--- a/Mouse Genetics/Cholesterol/bxd-cholesterol-calcium.Rmd
+++ b/Mouse Genetics/Cholesterol/bxd-cholesterol-calcium.Rmd
@@ -75,9 +75,28 @@ combined.data <-
             bind_rows(chol.f.data,chol.m.data),
             by=c("Name","Sex"),
             suffix=c("_ca","_chol")) %>%
-  mutate(Chol=Value_chol*38.665 ) %>% #convert to mg/dL
-  mutate(Ca = Value_ca*40.05)#convert to mg/dL
+  mutate(Chol=Value_chol*38.665,
+         Chol.se = SE_chol*38.665) %>% #convert to mg/dL
+  mutate(Ca = Value_ca*4.005,
+         Ca.se = SE_ca*4.005)#convert to mg/dL
 
+```
+
+# Sample Sizes
+
+```{r sample-sizes}
+combined.data %>%
+  mutate(Ca.Data = !(is.na(Ca)),
+         Chol.Data = !(is.na(Chol))) %>%
+  group_by(Sex,Ca.Data,Chol.Data) %>%
+  count %>%
+  kable(caption="Number of strains for BXD Ca/Chol associations")
+
+combined.data %>%
+  mutate(Total.Mice = N_ca + N_chol) %>%
+  group_by(Sex) %>%
+  summarize(All.Mice = sum(Total.Mice)) %>%
+  kable(caption="Number of strains for BXD Ca/Chol associations")
 ```
 
 # Analysis of BXD 
@@ -96,6 +115,23 @@ combined.data %>%
   facet_grid(.~Sex) +
   theme_classic() +
   theme(text=element_text(size=16))
+
+combined.data %>%
+  ggplot(aes(y=Chol,x=Ca)) +
+  geom_point() +
+  geom_errorbar(aes(ymin=Chol-Chol.se,
+                    ymax=Chol+Chol.se)) +
+  geom_errorbarh(aes(xmin=Ca-Ca.se,
+                    xmax=Ca-Ca.se)) +
+  geom_smooth(method="lm",color="grey") +
+  labs(y="Cholesterol (mg/dL)",
+       x="Calcium (mg/dL)",
+       title="BXD Strains") +
+  #geom_label_repel(aes(label=Name)) +
+  facet_grid(.~Sex) +
+  theme_classic() +
+  theme(text=element_text(size=16))
+
 
 library(broom)
 with(combined.data, cor.test(Ca,Chol, method="spearman"))  %>%
