Fixed error in meta-analysis command

--- a/Meta Analysis/pPTH-cholesterol-case-control.qmd
+++ b/Meta Analysis/pPTH-cholesterol-case-control.qmd
@@ -43,7 +43,7 @@ analysis <- metacont(data=data,
                     mean.e=PTH_mean,
                     mean.c=Controls_mean,
                     sd.e=PTH_SD,
-                    sd.c=Controls_mean,
+                    sd.c=Controls_SD,
                     studlab = Study,
                     method.smd="Hedges",
                     sm="SMD",
