--- a/Meta Analysis/cholesterol-calcium.qmd
+++ b/Meta Analysis/cholesterol-calcium.qmd
@@ -20,8 +20,7 @@ options(scipen = 2, digits = 3)
 
 ## Data Souces
 
-Located studies from PubMed searches and checking internal references.  Manually re-calculated cholesterol to mM when presented in mg/dL
-
+Located studies from PubMed searches and checking internal references. Manually re-calculated cholesterol to mM when presented in mg/dL
 
 ```{r data-input}
 data.sheet <- 'https://docs.google.com/spreadsheets/d/e/2PACX-1vTyvQnc6bLRLGT6QXEMHxiAQVbK_zag_JIAjvYjTMXINcqdkBwglmg_mlj_k9ml9QsrNQl-tZgy8ACl/pub?gid=1100702568&single=true&output=csv'
@@ -29,13 +28,13 @@ library(readr)
 data <- read_csv(data.sheet)#from a google sheet
 ```
 
-The data can be found in the google sheet `r data.sheet`.  This script can be found in `r getwd()` and was most recently run on `r date()`
+The data can be found in the google sheet `r data.sheet`. This script can be found in `r getwd()` and was most recently run on `r date()`
 
 ## Meta Analysis
 
 Analysed data from mean +/- SD of cases and controls
 
-```{r pth-meta-analysis}
+```{r ca-chol-meta}
 library(meta)
 library(tidyr)
 analysis <- metacor(data=data %>% dplyr::filter(!is.na(`r`)),
@@ -49,7 +48,8 @@ analysis <- metacor(data=data %>% dplyr::filter(!is.na(`r`)),
                  title="Calcium and Cholesterol")
 
 forest.meta(analysis,
-            fontsize=6)
+            fontsize=6,,
+            test.overall.random=TRUE)
 ```
 
 # Analysis
